overflow corrected

--- a/flex_boxes.css
+++ b/flex_boxes.css
@@ -78,6 +78,7 @@ article {
   height: 400px;
   text-align: center;
   border: 1px solid black;
+  overflow: auto;
 }
 
 .five {
